--- a/start.html
+++ b/start.html
@@ -1,8 +1,35 @@
 <html lang="en">
 	<head>
+        <link rel="stylesheet" type="text/css" href="css/font.css">
+        <link rel="stylesheet" type="text/css" href="css/slide1.css">
+	<link href='https://fonts.googleapis.com/css?family=Passero+One' rel='stylesheet' type='text/css'>
+
 		<title>Impress Demo</title>
 	</head>
 	<body>
-		<script src="js/impress.js"></script>
+		<div id="impress">
+			<div class="step" id="start" data-x="1000" data-y="500" >
+        			<p style='width:1000px;font-size:80px;
+				text-align:center'>Chessgames</p>
+                                <img src="gifs/example_chess_gif.gif" id="Example_1_gif"alt="Example 1" height="420" width="420"> </img>
+				<p>Impress.js </p>
+    			</div>
+
+			<div class="step" id="slide2" data-x="-500" data-y="0" data-z="-800">
+        			<p style='width:1000px;font-size:80px;'>
+				Chess is the koolest</p>
+
+				<p>Impress.js</p>
+    			</div>
+		
+			<div class="step" id="slide3" data-x="0" data-rotate-x="90" data-rotatey="0" data-z="-800">
+        			<p style='width:1000px;font-size:80px;'>
+				Stu is a nerd</p>
+				<p>Impress.js</p>
+    			</div>
+
+		</div>
+		<script type="text/javascript" src="js/impress.js"></script>
+		<script type="text/javascript">impress().init();</script>
 	</body>
 </html>
