First Presentation Update
Very minimal presentation done

--- a/start.html
+++ b/start.html
@@ -8,23 +8,28 @@
 	</head>
 	<body>
 		<div id="impress">
-			<div class="step" id="start" data-x="1000" data-y="500" >
+			<div class="step" id="start" data-x="0" data-y="0" >
         			<p style='width:1000px;font-size:80px;
 				text-align:center'>Chessgames</p>
-                                <img src="gifs/example_chess_gif.gif" id="Example_1_gif"alt="Example 1" height="420" width="420"> </img>
-				<p>Impress.js </p>
-    			</div>
+				<center><img src="images/team_toast.jpg" id="TeamToastImage" alt="TeamToast" height="420" width="420" align="centered"></center></img>
+    				
+			</div>
 
-			<div class="step" id="slide2" data-x="-500" data-y="0" data-z="-800">
+			<div class="step" id="slide1" data-x="1500" data-rotate-x="90" data-rotate-y="25" data-z="50">
         			<p style='width:1000px;font-size:80px;'>
-				Chess is the koolest</p>
-
-				<p>Impress.js</p>
-    			</div>
-		
-			<div class="step" id="slide3" data-x="0" data-rotate-x="90" data-rotatey="0" data-z="-800">
-        			<p style='width:1000px;font-size:80px;'>
-				Stu is a nerd</p>
+				Introduction</p>
+				<style>
+				ul.toast{
+				list-style-image: url('images/bullet.jpg');
+				}
+				
+				</style>
+				<p style='width:1000px;font-size:80px;'>
+				<ul class="toast">
+				<li class = "toast">Our Project</li>
+				<li class = "toast">What we've done</li>
+				<li class = "toast">Goals for future</li>
+				</ul>
 				<p>Impress.js</p>
     			</div>
 
