--- a/start.html
+++ b/start.html
@@ -179,9 +179,12 @@ window.onload = function() {
 			<div class="step" id="slide4_jared" data-x="8000" data-y="-5500" data-rotate-x="270" data-rotate-y="540" data-rotate-z="270" data-z="-1500">
 				
 <p style="font-size: 72px; color: #E37C1D;"> Jared's slide</p>
-<p style="font-size: 72px; color: black;"> Master Challenge</p>
-<p style="font-size: 72px; color: #E37C1D;"> Jared's slide</p>
 <p style="font-size: 72px; color: #E37C1D;"> Master Challenge</p>
+<p style="font-size: 72px; color: black; text-align: center;"> Master Challenge</p>
+<p style="font-size: 72px; color: #E37C1D;"> Master Challenge</p>
+<br></br>
+<br></br>
+<br></br>
     <div class="svg-container">
       <svg id="main-svg" viewBox="0 0 600 742" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
         <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
