Changed the end a little bit
Added one more slide

--- a/start.html
+++ b/start.html
@@ -313,7 +313,7 @@ setInterval(draw, 33);
              </div>
 			
 			<div class="step" id="slide7_conclusion" data-x="-5000" data-y="1500" data-rotate-x="90" data-rotate-y="180" data-rotate-z="270" data-z="-3000">
-				<p style="font-size: 72px;"> Conclusion</p>
+				<p style="font-size: 72px; text-align: center;">Conclusion</p>
 				<br><br \>
 				<br><br \>
 				<br><br \>
@@ -321,7 +321,7 @@ setInterval(draw, 33);
 				<br><br \>
 				
 <div id="letter">T</div>
-<div id="description"><p style="font-size: 40px;">is for Team Toast</p></div>
+
 
 <div id="animation">
     <div class="toast one"></div>
@@ -330,6 +330,12 @@ setInterval(draw, 33);
 </div>
 
 			</div>
+
+
+<div class="step" id="slide8_questions" data-x="-7000" data-y="1500">
+	<p style="font-size: 72px; text-align: center;">Questions?</p>
+</div>
+
 		<script type="text/javascript" src="js/impress.js"></script>
 		<script type="text/javascript">impress().init();</script>
 	</body>
