--- a/start.html
+++ b/start.html
@@ -31,7 +31,7 @@
                         </div>
  
                         <div class="step" id="slide1" data-x="1500" data-y="0" data-rotate-x="90" data-rotate-y="180" data-rotate-z="270" data-z="50">
-                         <p style='width:1000px;font-size:80px;'>
+                         <p style='width:1000px;font-size:80px; text-align: center;'>
                                 Introduction</p>
                                 
                                 <script>
